--- a/text-summ/src/App.css
+++ b/text-summ/src/App.css
@@ -7,11 +7,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +20,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.text-area{
+  overflow-y: scroll;
+  width: 20rem;
+  margin-top: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 350px){
+  .text-area{
+    width: 8rem;
+
   }
 }
+  
