--- a/text-summ/src/App.css
+++ b/text-summ/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .App-logo {
@@ -24,6 +28,7 @@
   overflow-y: scroll;
   width: 20rem;
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 @media screen and (max-width: 350px){
