--- a/text-summ/src/App.css
+++ b/text-summ/src/App.css
@@ -12,7 +12,14 @@
 }
 
 
-
+.body{
+  /*
+  * Created with https://www.css-gradient.com
+  * Gradient link: https://www.css-gradient.com/?c1=edecfd&c2=c9a992&gt=l&gd=dbl
+  */
+  background: rgba(237, 236, 253, 1.0);
+  background: linear-gradient(45deg, rgba(237, 236, 253, 1.0), rgba(201, 169, 146, 1.0));;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,18 +30,33 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.title{
 
+}
 .text-area{
   overflow-y: scroll;
   width: 20rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-
+.summary-title{
+  margin-bottom: 2rem;
+}
+.summary{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 @media screen and (max-width: 350px){
   .text-area{
     width: 8rem;
 
+  }
+  .summary{
+    font-size: small;
+  }
+  .title{
+    font-size: medium;
   }
 }
   
